integ-tests/tests/snapshots/parser__signed_radix__neg_hex.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ neg_hex:1:5
  │
1 │ a = -0x0
  │     ^^^^ unable to parse number
