integ-tests/tests/snapshots/parser__signed_radix__plus_bin.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[invalid-number]: 
  ┌─ plus_bin:1:5
  │
1 │ a = +0b0
  │     ^^^^ unable to parse number
